TODO:

* Collect all tweets of a day/week/whatever of the blog owner
  into one article and publish it dayly/weekly/whatever
* "check tweetback" link should add new tweetbacks immediately
* Link twitter accs with s9y accs. Only s9y autors linked to a
  twitter acc should be able to create tweets with that acc.
* Twitter announcements/credentials etc. per author instead of
  only per central blog

1.43 (brockhaus)
--------------------------
    * Announce article: check for real URL lenght, as twitter makes it longer sometimes. 
    * Tweeter: Count chars directly after a short URL was added. Counts URLs as twitter URL length always.
    * Article announcement with "uncompressed" urls did not work very well.

1.42 (brockhaus)
--------------------------
    * Followme widget hat a " too much (thanks to Matthias Mees)
    * Auto tagging of article announcements was still not working correctly always

1.41 (brockhaus)
--------------------------
    * Auto tagging of article announcements was not working correctly always

1.40 (brockhaus)
--------------------------
    * PHP 5 required (garvin)
    * Simplyfied twitter oauth connect. The plugin uses one client for all blogs (you only have to connect). Can be overridden with an own client still.
    * Tweeter: Doesn't show timeline changer anymore, if timeline is switched off in configuration. Was too confusing.
    * Added geo location to announcement tweets: If the geotag plugin is installed and geo coords are added when publishing, the plugin will send them to twitter and / or identica. To see them, you have to enable location based tweets/dents in your profile.

1.39 (brockhaus)
--------------------------
    * Fixed Tweetback check, removed backtweet completely (as the service is gone)
    * Fixed bit.ly shortener and added j.mp version, removed tr.im and cli.gs (not working any longer).
    * Tweeter: Supports more than one twitter account now